--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <link rel="stylesheet" media="all" href="./AFRY Smart Performance Services _ AFRY_files/css__udwMpKVbWGkIB-_4eqa4lxMdCDukhFVGoEC6HjVXIU.css">
 <link rel="stylesheet" media="all" href="./AFRY Smart Performance Services _ AFRY_files/cookies.css">
 <link rel="stylesheet" media="all" href="./AFRY Smart Performance Services _ AFRY_files/css_v12A8NDpSDmUblKl_KWA2bCiwm5bzIPZnr_wlb3bcjU.css">
-
+<link rel="stylesheet" media="all" href="style.css">
+	
     <script src="./AFRY Smart Performance Services _ AFRY_files/modernizr.min.js.download"></script>
 <script src="./AFRY Smart Performance Services _ AFRY_files/modernizr-additional-tests.js.download"></script>
 
